# quarter-lib

./: README.md  pyproject.toml  setup.cfg
.github/scripts/: release.py
.github/workflows/: publish.yml  release.yml
src/quarter_lib/: __init__.py  app.py
src/quarter_lib/akeyless/: __init__.py
src/quarter_lib/database/mysql/: __init__.py
src/quarter_lib/database/spotify/: __init__.py
src/quarter_lib/database/timer/: __init__.py
src/quarter_lib/file_helper/: __init__.py
src/quarter_lib/google/: __init__.py
src/quarter_lib/google_calendar/: __init__.py
src/quarter_lib/logging/: __init__.py
src/quarter_lib/models/: __init__.py
src/quarter_lib/monica/: __init__.py
src/quarter_lib/notion/: __init__.py
src/quarter_lib/todoist/: __init__.py
src/quarter_lib/transcriber/: __init__.py
src/quarter_lib/voice_recorder/: __init__.py
