[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quarter_lib"
description = "TBD"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
  {name = "Janik Viertel", email = "janik.viertel@outlook.com"}
]
maintainers = [
  {name = "Janik Viertel", email = "janik.viertel@outlook.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
dependencies = [
    "requests",
    "loguru",
    "python-dotenv",
    "pydantic",

    "google-auth-oauthlib==1.2.2",
    "google-auth==2.40.3",
    "google-api-python-client==2.178.0",
    
    "todoist-api-python==3.1.0",

    "PyMySQL==1.0.2",

    "SpeechRecognition==3.14.3"
    
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/viertel97/quarter-lib"
Changelog = "https://github.com/viertel97/quarter-lib/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
