[metadata]
name = quarter_lib
description = TBD
long_description_content_type = text/markdown
url = https://github.com/viertel97/quarter-lib
project_urls =
    Changelog = https://github.com/viertel97/quarter-lib/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    dotenv
    loguru


[options.packages.find]
where = src